# s4

./: README.md  config.py  pyproject.toml  s4.db
src/s4/: __init__.py  cli.py  client.py  server.py
tests/: test_s4.ipynb
